<resources>
    <string name="app_name">Moviesss</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="about_us">About us</string>
    <string name="movies">Movies</string>
    <string name="title_activity_movie_details"></string>

</resources>
